--- a/testpage.css
+++ b/testpage.css
@@ -1,3 +1,9 @@
-body  {
-border: 2px solid red;
+body {
+	margin: 0 0;
+	font-family: Arial, Helvetica, sans-serif;
+    font-size: 100%;
+	width: 500px;
+	margin: 0 auto;
+	padding: 1em;
+    border: 2px solid blue;
 }
